Get delegate token from template
